--- a/estimatesOfLocation.ipynb
+++ b/estimatesOfLocation.ipynb
@@ -204,11 +204,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "outputs": [],
    "source": [
-    "import csv\n"
+    "import csv"
    ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Weighted median"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "[1, 2, 3, 4, 5]\n",
+      "[0.15, 0.1, 0.2, 0.3, 0.25]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def orderTwoLists(data,weights):\n",
+    "    for i in range(len(data)):\n",
+    "        print(i)\n",
+    "        for j in range(i,len(data)):\n",
+    "            if data[i]>data[j]:\n",
+    "                aux = data[i]\n",
+    "                data[i] = data[j]\n",
+    "                data[j] = aux\n",
+    "\n",
+    "                auxW = weights[i]\n",
+    "                weights[i] = weights[j]\n",
+    "                weights[j] = auxW\n",
+    "\n",
+    "    print(data)\n",
+    "    print(weights)\n",
+    "\n",
+    "orderTwoLists([1,2,4,3,5],[0.15,0.1,0.3,0.2,0.25])"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
    "metadata": {
     "collapsed": false,
     "pycharm": {
