Median absolute deviation from the median

--- a/estimatesOfLocation.ipynb
+++ b/estimatesOfLocation.ipynb
@@ -230,26 +230,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "[1, 2, 3, 4, 5]\n",
-      "[0.15, 0.1, 0.2, 0.3, 0.25]\n"
-     ]
-    }
-   ],
+   "execution_count": 7,
+   "outputs": [],
    "source": [
     "def orderTwoLists(data,weights):\n",
     "    for i in range(len(data)):\n",
-    "        print(i)\n",
     "        for j in range(i,len(data)):\n",
     "            if data[i]>data[j]:\n",
     "                aux = data[i]\n",
@@ -260,10 +245,61 @@
     "                weights[i] = weights[j]\n",
     "                weights[j] = auxW\n",
     "\n",
-    "    print(data)\n",
-    "    print(weights)\n",
+    "    return data,weights"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "outputs": [],
+   "source": [
+    "def weighted_median(data,weights):\n",
+    "    possible_wm = []\n",
+    "    for i in range(len(weights)):\n",
+    "        izq = sum(weights[0:i])\n",
+    "        der = sum(weights[i+1:])\n",
+    "        if izq<=0.5 and der<=0.5:\n",
+    "            possible_wm.append(data[i])\n",
     "\n",
-    "orderTwoLists([1,2,4,3,5],[0.15,0.1,0.3,0.2,0.25])"
+    "    if len(possible_wm)==1:\n",
+    "        return possible_wm[0]\n",
+    "\n",
+    "    return (possible_wm[0]+possible_wm[1])/2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2.5\n",
+      "2.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "data,weights = orderTwoLists([1,2,4,3,5],[0.15,0.1,0.3,0.2,0.25])\n",
+    "print(weighted_median(data,weights))\n",
+    "data,weights = orderTwoLists([1,2,4,3],[0.49,0.01,0.25,0.25])\n",
+    "print(weighted_median(data,weights))\n",
+    "data,weights = orderTwoLists([1,2,4,3],[0.25,0.25,0.25,0.25])\n",
+    "print(weighted_median(data,weights))"
    ],
    "metadata": {
     "collapsed": false,
